h1. CHANGELOG

h2. 2.1.6 August 14, 2012

* update 'gems' recipe to create PostgreSQL user and database 
* update 'gems' and 'frontend' recipes to use foundation generator

h2. 2.1.5 August 14, 2012

* fix 'gems' recipe to modify database.yml except when 'mongoid' is selected
* fix 'layout.erb' to enable git commits (contributed by tomykaira)

h2. 2.1.4 August 13, 2012

* renamed 'all' recipe as 'core' to select all core recipes
* fix 'gems' recipe to modify database.yml as needed for 'postgresql' or 'mysql'

h2. 2.1.3 August 13, 2012

* added 'all' recipe as shortcut to selecting all recipes
* changed name of 'database' recipe to 'init' to reduce confusion
* new 'copy_from' method in helpers.erb
* fix 'frontend' recipe for correct downloads of 'normalize' and 'skeleton'
* fix 'extras' recipe to run after 'database' recipe for a final git commit
* fix 'gems' recipe to remove 'sqlite3' from the Gemfile unless 'sqlite' is selected
* fix 'readme' recipe to show if 'postgresql' or 'mysql' is selected
* fix 'extras' recipe for more accurate error message when rvm can't switch gemsets

h2. 2.1.2 August 12, 2012

* move repository for source files from rails3-application-templates to rails-composer
* fix 'auth' recipe to modify ability.rb file when CanCan authorization is selected
* update gem 'haml' from 3.1.6 to 3.1.7
* update gem 'puma' from 1.5.0 to 1.6.1

h2. 2.1.1 August 11, 2012

* add 'railsapps' recipe for example apps
* add 'git' recipe (should precede any other recipe)
* fixes to 'setup' and 'frontend' recipes (contributed by tomykaira)
* fix syntax for alternative bundle path (contributed by tomykaira)
* update gem 'mongoid' from 3.0.3 to 3.0.4

h2. 2.1.0 August 10, 2012

* use local recipes (contributed by tomykaira)
* hidden preference for alternative bundle path (can be set in the defaults file)
* fix 'models' recipe to only install rolify when authorization is selected
* update gem 'zurb-foundation' from 3.0.5 to 3.0.8