@@ -7,29 +7,24 @@
 insert_into_file 'Gemfile', "ruby '1.9.3'\n", :before => "gem 'rails', '3.2.6'" if prefer :deploy, 'heroku'
 
 ## Web Server
-gem 'thin', '>= 1.4.1', :group => [:development, :test] if prefer :dev_webserver, 'thin'
-gem 'unicorn', '>= 4.3.1', :group => [:development, :test] if prefer :dev_webserver, 'unicorn'
-gem 'puma', '>= 1.5.0', :group => [:development, :test] if prefer :dev_webserver, 'puma'
-gem 'thin', '>= 1.4.1', :group => :production if prefer :prod_webserver, 'thin'
-gem 'unicorn', '>= 4.3.1', :group => :production if prefer :prod_webserver, 'unicorn'
-gem 'puma', '>= 1.6.1', :group => :production if prefer :prod_webserver, 'puma'
+if (prefs[:dev_webserver] == prefs[:prod_webserver])
+  gem 'thin', '>= 1.4.1' if prefer :dev_webserver, 'thin'
+  gem 'unicorn', '>= 4.3.1' if prefer :dev_webserver, 'unicorn'
+  gem 'puma', '>= 1.6.1' if prefer :dev_webserver, 'puma'
+else
+  gem 'thin', '>= 1.4.1', :group => [:development, :test] if prefer :dev_webserver, 'thin'
+  gem 'unicorn', '>= 4.3.1', :group => [:development, :test] if prefer :dev_webserver, 'unicorn'
+  gem 'puma', '>= 1.6.1', :group => [:development, :test] if prefer :dev_webserver, 'puma'
+  gem 'thin', '>= 1.4.1', :group => :production if prefer :prod_webserver, 'thin'
+  gem 'unicorn', '>= 4.3.1', :group => :production if prefer :prod_webserver, 'unicorn'
+  gem 'puma', '>= 1.6.1', :group => :production if prefer :prod_webserver, 'puma'
+end
 
 ## Database Adapter
 gsub_file 'Gemfile', /gem 'sqlite3'\n/, '' unless prefer :database, 'sqlite'
 gem 'mongoid', '>= 3.0.3' if prefer :orm, 'mongoid'
 gem 'pg', '>= 0.14.0' if prefer :database, 'postgresql'
 gem 'mysql2', '>= 0.3.11' if prefer :database, 'mysql'
-copy_from_repo 'config/database-postgresql.yml', :prefs => 'postgresql'
-copy_from_repo 'config/database-mysql.yml', :prefs => 'mysql'
-gsub_file "config/database.yml", /username: .*/, "username: #{app_name}" unless prefer :orm, 'mongoid'
-gsub_file "config/database.yml", /password: .*/, "password: #{app_name}" unless prefer :orm, 'mongoid'
-begin
-  run "createuser #{app_name}" if prefer :database, 'postgresql'
-  run 'bundle exec rake db:drop' if prefer :database, 'postgresql'
-  run 'bundle exec rake db:create:all' if prefer :database, 'postgresql'
-rescue StandardError
-  raise "unable to create a user and database for PostgreSQL"
-end
 
 ## Template Engine
 if prefer :templates, 'haml'
@@ -72,7 +67,8 @@ gem 'machinist', '>= 2.0', :group => :test if prefer :fixtures, 'machinist'
 
 ## Front-end Framework
 gem 'bootstrap-sass', '>= 2.0.4.0' if prefer :bootstrap, 'sass'
-gem 'zurb-foundation', '>= 3.0.8', :group => :assets if prefer :frontend, 'foundation'
+gem 'compass-rails', '>= 1.0.3', :group => :assets if prefer :frontend, 'foundation'
+gem 'zurb-foundation', '>= 3.0.9', :group => :assets if prefer :frontend, 'foundation'
 if prefer :bootstrap, 'less'
   gem 'twitter-bootstrap-rails', '>= 2.1.1', :group => :assets
   # install gem 'therubyracer' to use Less
@@ -117,11 +113,39 @@ end
 git :add => '.' if prefer :git, true
 git :commit => "-aqm 'rails_apps_composer: Gemfile'" if prefer :git, true
 
-### GENERATORS ###
+### CREATE DATABASE ###
 after_bundler do
-  ## Database
+  copy_from_repo 'config/database-postgresql.yml', :prefs => 'postgresql'
+  copy_from_repo 'config/database-mysql.yml', :prefs => 'mysql'
   generate 'mongoid:config' if prefer :orm, 'mongoid'
   remove_file 'config/database.yml' if prefer :orm, 'mongoid'
+  if prefer :database, 'postgresql'
+    begin
+      say_wizard "Creating a user named '#{app_name}' for PostgreSQL"
+      run "createuser #{app_name}" if prefer :database, 'postgresql'
+      gsub_file "config/database.yml", /username: .*/, "username: #{app_name}"
+    rescue StandardError
+      raise "unable to create a user for PostgreSQL"
+    end
+  end
+  unless prefer :database, 'sqlite'
+    affirm = multiple_choice "Drop any existing databases named #{app_name}?", 
+      [["Yes (continue)",true], ["No (abort)",false]]
+    if affirm
+      run 'bundle exec rake db:drop'
+    else
+      raise "aborted at user's request"
+    end
+  end
+  run 'bundle exec rake db:create:all' unless prefer :orm, 'mongoid'
+  run 'bundle exec rake db:create' if prefer :orm, 'mongoid'
+  ## Git
+  git :add => '.' if prefer :git, true
+  git :commit => "-aqm 'rails_apps_composer: create database'" if prefer :git, true
+end # after_bundler
+
+### GENERATORS ###
+after_bundler do
   ## Front-end Framework
   generate 'foundation:install' if prefer :frontend, 'foundation'
   ## Git
