@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.1.6"
+  VERSION = "2.1.7"
 end
